docs: release notes for 1.24.1 and 1.23.5 (#5768)
Closes #5764

Signed-off-by: Jaime Silvela <jaime.silvela@enterprisedb.com>
Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>
Co-authored-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>
(cherry picked from commit b8d79f7a3895fddef446386d6c1f72a7bb1867ec)

--- a/docs/src/release_notes/v1.24.md
+++ b/docs/src/release_notes/v1.24.md
@@ -6,6 +6,55 @@ For a complete list of changes, please refer to the
 [commits](https://github.com/cloudnative-pg/cloudnative-pg/commits/release-1.24)
 on the release branch in GitHub.
 
+## Version 1.24.1
+
+**Release date:** Oct 16, 2024
+
+### Enhancements:
+
+- Remove the use of `pg_database_size` from the status probe, as it caused
+  high resource utilization by scanning the entire `PGDATA` directory to
+  compute database sizes. The `kubectl status` plugin will now rely on `du`
+  to provide detailed size information retrieval (#5689).
+- Add the ability to configure the `full_page_writes` parameter in
+  PostgreSQL. This setting defaults to `on`, in line with PostgreSQL's
+  recommendations (#5516).
+- Plugin:
+    - Add the `logs pretty` command in the `cnpg` plugin to read a log stream
+      from standard input and output a human-readable format, with options to
+      filter log entries (#5770)
+    - Enhance the `status` command by allowing multiple `-v` options to
+      increase verbosity for more detailed output (#5765).
+    - Add support for specifying a custom Docker image using the `--image`
+      flag in the `pgadmin4` plugin command, giving users control over the
+      Docker image used for pgAdmin4 deployments (#5515).
+
+### Fixes:
+
+- Resolve an issue with concurrent status updates when demoting a primary to a
+  designated primary, ensuring smoother transitions during cluster role changes
+  (#5755).
+- Ensure that replica PodDisruptionBudgets (PDB) are removed when scaling down
+  to two instances, enabling easier maintenance on the node hosting the replica
+  (#5487).
+- Prioritize full rollout over inplace restarts (#5407).
+- When using `.spec.postgresql.synchronous`, ensure that the
+  `synchronous_standby_names` parameter is correctly set, even when no replicas
+  are reachable (#5831).
+- Fix an issue that could lead to double failover in cases of lost
+  connectivity (#5788).
+- Correctly set the `TMPDIR` and `PSQL_HISTORY` environment variables for pods
+  and jobs, improving temporary file and history management (#5503).
+- Plugin:
+    - Resolve a race condition in the `logs cluster` command (#5775).
+    - Display the `potential` sync status in the `status` plugin (#5533).
+    - Fix the issue where pods deployed by the `pgadmin4` command didn’t have
+      a writable home directory (#5800).
+
+### Supported versions
+
+- PostgreSQL 17 (PostgreSQL 17.0 is the default image)
+
 ## Version 1.24.0
 
 **Release date:** Aug 22, 2024
