--- a/docs/src/release_notes/v1.25.md
+++ b/docs/src/release_notes/v1.25.md
@@ -29,6 +29,9 @@ on the release branch in GitHub.
   `.spec.probes` stanza. (#6266)
 - Support additional `pg_dump` and `pg_restore` options to enhance database
   import flexibility. (#6214)
+- Add support for `maxConcurrentReconciles` in the CloudNativePG controller and
+  set the default to 10, improving the operator's ability to efficiently manage
+  larger deployments out of the box. (#5678)
 - Enhance the `cnpg` plugin's `backup` command to support plugins. (#6045)
 
 ### Bug Fixes
@@ -36,6 +39,7 @@ on the release branch in GitHub.
 - Ensure the former primary flushes its WAL file queue to the archive before
   re-synchronizing as a replica, reducing recovery times and enhancing data
   consistency during failovers. (#6141)
+- Clean the WAL volume along with the `PGDATA` volume during bootstrap. (#6265)
 - Update the operator to set the cluster phase to `Unrecoverable` when
   previously generated `PersistentVolumeClaims` are missing. (#6170)
 - Fix the parsing of the `synchronous_standby_names` GUC when
@@ -47,6 +51,10 @@ on the release branch in GitHub.
 - Configure libpq environment variables, including `PGHOST`, in PgBouncer pods
   to enable seamless access to the `pgbouncer` virtual database using `psql`
   from within the container. (#6247)
+- Remove unnecessary updates to the Cluster status when verifying changes in
+  the image catalog. (#6277)
+- Ensure the `kubectl` context is properly passed in the `psql` command of the
+  `cnpg` plugin. (#6257)
 
 ### Supported Versions
 
