docs: mention PG 12
Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/docs/src/release_notes/v1.25.md
+++ b/docs/src/release_notes/v1.25.md
@@ -61,4 +61,5 @@ on the release branch in GitHub.
 - **Kubernetes**: 1.31, 1.30, and 1.29
 - **PostgreSQL**: 17, 16, 15, 14, and 13
     - Default image: PostgreSQL 17.2
+    - Officially dropped support for PostgreSQL 12
     - PostgreSQL 13 support ends on November 12, 2025
