--- a/docs/src/release_notes/v1.25.md
+++ b/docs/src/release_notes/v1.25.md
@@ -8,7 +8,7 @@ on the release branch in GitHub.
 
 ## Version 1.25.0-rc1
 
-**Release Date:** December 6, 2024
+**Release Date:** December 9, 2024
 
 ### Features
 
@@ -32,7 +32,11 @@ on the release branch in GitHub.
 - Add support for `maxConcurrentReconciles` in the CloudNativePG controller and
   set the default to 10, improving the operator's ability to efficiently manage
   larger deployments out of the box. (#5678)
-- Enhance the `cnpg` plugin's `backup` command to support plugins. (#6045)
+- Add the `cnpg.io/userType` label to secrets generated for predefined users,
+  specifically `superuser` and `app`. (#4392)
+- `cnpg` plugin:
+    - Enhance the `backup` command to support plugins. (#6045)
+    - Honor the `User-Agent` header in HTTP requests with the API server. (#6153)
 
 ### Bug Fixes
 
@@ -53,8 +57,9 @@ on the release branch in GitHub.
   from within the container. (#6247)
 - Remove unnecessary updates to the Cluster status when verifying changes in
   the image catalog. (#6277)
-- Ensure the `kubectl` context is properly passed in the `psql` command of the
-  `cnpg` plugin. (#6257)
+- `cnpg` plugin:
+    - Ensure the `kubectl` context is properly passed in the `psql` command. (#6257)
+    - Avoid displaying physical backups block when empty with `status` command. (#5998)
 
 ### Supported Versions
 
