--- a/docs/src/release_notes/v1.25.md
+++ b/docs/src/release_notes/v1.25.md
@@ -41,7 +41,7 @@ on the release branch in GitHub.
   consistency during failovers. (#6141)
 - Clean the WAL volume along with the `PGDATA` volume during bootstrap. (#6265)
 - Update the operator to set the cluster phase to `Unrecoverable` when
-  previously generated `PersistentVolumeClaims` are missing. (#6170)
+  all previously generated `PersistentVolumeClaims` are missing. (#6170)
 - Fix the parsing of the `synchronous_standby_names` GUC when
   `.spec.postgresql.synchronous.method` is set to `first`. (#5955)
 - Correct role changes to apply at the transaction level instead of the
