docs: Prepare release notes for 1.25.0 release
Signed-off-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>

--- a/docs/src/release_notes/v1.25.md
+++ b/docs/src/release_notes/v1.25.md
@@ -6,9 +6,9 @@ For a complete list of changes, please refer to the
 [commits](https://github.com/cloudnative-pg/cloudnative-pg/commits/release-1.25)
 on the release branch in GitHub.
 
-## Version 1.25.0-rc1
+## Version 1.25.0
 
-**Release Date:** December 9, 2024
+**Release Date:** December 23, 2024
 
 ### Features
 
@@ -61,9 +61,17 @@ on the release branch in GitHub.
     - Ensure the `kubectl` context is properly passed in the `psql` command. (#6257)
     - Avoid displaying physical backups block when empty with `status` command. (#5998)
 
+<!--
+74507bb78 feat: check the number of spec.schedule fields (#5396)
+bc55791b7 fix(roles): properly quote inRoles in SQL statements (#6346)
+67cc5473f fix: use optimistic locking when updating conditions (#6328)
+e22e7e9fd fix: key collision in structured logs (#6324)
+ec06335f7 fix: panic recovering from an external server with no backup configuration (#6300)
+-->
+
 ### Supported Versions
 
-- **Kubernetes**: 1.31, 1.30, and 1.29
+- **Kubernetes**: 1.32, 1.31, 1.30, and 1.29
 - **PostgreSQL**: 17, 16, 15, 14, and 13
     - Default image: PostgreSQL 17.2
     - Officially dropped support for PostgreSQL 12
