--- a/docs/src/release_notes/v1.25.md
+++ b/docs/src/release_notes/v1.25.md
@@ -34,6 +34,8 @@ on the release branch in GitHub.
   larger deployments out of the box. (#5678)
 - Add the `cnpg.io/userType` label to secrets generated for predefined users,
   specifically `superuser` and `app`. (#4392)
+- Improved validation for the `spec.schedule` field in ScheduledBackups,
+  raising warnings for potential misconfigurations. (#5396)
 - `cnpg` plugin:
     - Enhance the `backup` command to support plugins. (#6045)
     - Honor the `User-Agent` header in HTTP requests with the API server. (#6153)
@@ -57,17 +59,17 @@ on the release branch in GitHub.
   from within the container. (#6247)
 - Remove unnecessary updates to the Cluster status when verifying changes in
   the image catalog. (#6277)
+- Prevent panic during recovery from an external server without proper backup
+  configuration. (#6300)
+- Resolved a key collision issue in structured logs, where the name field was
+  inconsistently used to log two distinct values. (#6324)
+- Resolved a potential race condition when patching certain conditions
+  in CRD statuses, improving reliability in concurrent updates. (#6317)
+- Ensure proper quoting of the inRoles field in SQL statements to prevent
+  syntax errors in generated SQL during role management. (#6346)
 - `cnpg` plugin:
     - Ensure the `kubectl` context is properly passed in the `psql` command. (#6257)
     - Avoid displaying physical backups block when empty with `status` command. (#5998)
-
-<!--
-74507bb78 feat: check the number of spec.schedule fields (#5396)
-bc55791b7 fix(roles): properly quote inRoles in SQL statements (#6346)
-67cc5473f fix: use optimistic locking when updating conditions (#6328)
-e22e7e9fd fix: key collision in structured logs (#6324)
-ec06335f7 fix: panic recovering from an external server with no backup configuration (#6300)
--->
 
 ### Supported Versions
 
