--- a/docs/src/release_notes/v1.25.md
+++ b/docs/src/release_notes/v1.25.md
@@ -20,6 +20,17 @@ on the release branch in GitHub.
   for declarative management of PostgreSQL logical replication. These simplify
   replication setup and facilitate online migrations to CloudNativePG. (#5329)
 
+- **Experimental Support for CNPG-I**: Introducing CNPG-I (CloudNativePG
+  Interface), a standardized framework designed to extend CloudNativePG
+  functionality through third-party plugins and foster the growth of the CNPG
+  ecosystem.
+  The [Barman Cloud Plugin](https://github.com/cloudnative-pg/plugin-barman-cloud) serves as a live
+  example, illustrating how plugins can be developed to enhance backup and
+  recovery workflows. Although CNPG-I support is currently experimental, it
+  offers a powerful approach to extending CloudNativePG without modifying the
+  operator’s core code—akin to PostgreSQL extensions. We welcome community
+  feedback and contributions to shape this exciting new capability.
+
 ### Enhancements
 
 - Add the `dataDurability` option to the `.spec.postgresql.synchronous` stanza,
@@ -50,6 +61,8 @@ on the release branch in GitHub.
   all previously generated `PersistentVolumeClaims` are missing. (#6170)
 - Fix the parsing of the `synchronous_standby_names` GUC when
   `.spec.postgresql.synchronous.method` is set to `first`. (#5955)
+- Resolved a potential race condition when patching certain conditions
+  in CRD statuses, improving reliability in concurrent updates. (#6328)
 - Correct role changes to apply at the transaction level instead of the
   database context. (#6064)
 - Remove the `primary_slot_name` definition from the `override.conf` file on
@@ -63,8 +76,6 @@ on the release branch in GitHub.
   configuration. (#6300)
 - Resolved a key collision issue in structured logs, where the name field was
   inconsistently used to log two distinct values. (#6324)
-- Resolved a potential race condition when patching certain conditions
-  in CRD statuses, improving reliability in concurrent updates. (#6317)
 - Ensure proper quoting of the inRoles field in SQL statements to prevent
   syntax errors in generated SQL during role management. (#6346)
 - `cnpg` plugin:
