docs: Release notes for 1.25.0, 1.24.2, 1.23.6 (#6424)
Closes #6420

Signed-off-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>
Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>
Co-authored-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/docs/src/release_notes/v1.25.md
+++ b/docs/src/release_notes/v1.25.md
@@ -6,9 +6,9 @@ For a complete list of changes, please refer to the
 [commits](https://github.com/cloudnative-pg/cloudnative-pg/commits/release-1.25)
 on the release branch in GitHub.
 
-## Version 1.25.0-rc1
+## Version 1.25.0
 
-**Release Date:** December 9, 2024
+**Release Date:** December 23, 2024
 
 ### Features
 
@@ -19,6 +19,17 @@ on the release branch in GitHub.
 - **Logical Replication Management**: Add `Publication` and `Subscription` CRDs
   for declarative management of PostgreSQL logical replication. These simplify
   replication setup and facilitate online migrations to CloudNativePG. (#5329)
+
+- **Experimental Support for CNPG-I**: Introducing CNPG-I (CloudNativePG
+  Interface), a standardized framework designed to extend CloudNativePG
+  functionality through third-party plugins and foster the growth of the CNPG
+  ecosystem.
+  The [Barman Cloud Plugin](https://github.com/cloudnative-pg/plugin-barman-cloud) serves as a live
+  example, illustrating how plugins can be developed to enhance backup and
+  recovery workflows. Although CNPG-I support is currently experimental, it
+  offers a powerful approach to extending CloudNativePG without modifying the
+  operator’s core code—akin to PostgreSQL extensions. We welcome community
+  feedback and contributions to shape this exciting new capability.
 
 ### Enhancements
 
@@ -34,6 +45,8 @@ on the release branch in GitHub.
   larger deployments out of the box. (#5678)
 - Add the `cnpg.io/userType` label to secrets generated for predefined users,
   specifically `superuser` and `app`. (#4392)
+- Improved validation for the `spec.schedule` field in ScheduledBackups,
+  raising warnings for potential misconfigurations. (#5396)
 - `cnpg` plugin:
     - Enhance the `backup` command to support plugins. (#6045)
     - Honor the `User-Agent` header in HTTP requests with the API server. (#6153)
@@ -48,6 +61,8 @@ on the release branch in GitHub.
   all previously generated `PersistentVolumeClaims` are missing. (#6170)
 - Fix the parsing of the `synchronous_standby_names` GUC when
   `.spec.postgresql.synchronous.method` is set to `first`. (#5955)
+- Resolved a potential race condition when patching certain conditions
+  in CRD statuses, improving reliability in concurrent updates. (#6328)
 - Correct role changes to apply at the transaction level instead of the
   database context. (#6064)
 - Remove the `primary_slot_name` definition from the `override.conf` file on
@@ -57,13 +72,19 @@ on the release branch in GitHub.
   from within the container. (#6247)
 - Remove unnecessary updates to the Cluster status when verifying changes in
   the image catalog. (#6277)
+- Prevent panic during recovery from an external server without proper backup
+  configuration. (#6300)
+- Resolved a key collision issue in structured logs, where the name field was
+  inconsistently used to log two distinct values. (#6324)
+- Ensure proper quoting of the inRoles field in SQL statements to prevent
+  syntax errors in generated SQL during role management. (#6346)
 - `cnpg` plugin:
     - Ensure the `kubectl` context is properly passed in the `psql` command. (#6257)
     - Avoid displaying physical backups block when empty with `status` command. (#5998)
 
 ### Supported Versions
 
-- **Kubernetes**: 1.31, 1.30, and 1.29
+- **Kubernetes**: 1.32, 1.31, 1.30, and 1.29
 - **PostgreSQL**: 17, 16, 15, 14, and 13
     - Default image: PostgreSQL 17.2
     - Officially dropped support for PostgreSQL 12
