docs: Release notes for 1.24.2 and 1.23.6
Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/docs/src/release_notes/v1.23.md
+++ b/docs/src/release_notes/v1.23.md
@@ -6,6 +6,57 @@ For a complete list of changes, please refer to the
 [commits](https://github.com/cloudnative-pg/cloudnative-pg/commits/release-1.23)
 on the release branch in GitHub.
 
+## Version 1.23.6
+
+**Release Date:** December 23, 2024
+
+!!! Warning
+    This is the final release in the 1.23.x series.
+    Users are strongly encouraged to upgrade to a newer minor version, as 1.23
+    is no longer supported.
+
+### Enhancements
+
+- Enable customization of startup, liveness, and readiness probes through the
+  `.spec.probes` stanza. (#6266)
+- Add the `cnpg.io/userType` label to secrets generated for predefined users,
+  specifically `superuser` and `app`. (#4392)
+- Improved validation for the `spec.schedule` field in ScheduledBackups,
+  raising warnings for potential misconfigurations. (#5396)
+- `cnpg` plugin:
+    - Honor the `User-Agent` header in HTTP requests with the API server. (#6153)
+
+### Bug Fixes
+
+- Ensure the former primary flushes its WAL file queue to the archive before
+  re-synchronizing as a replica, reducing recovery times and enhancing data
+  consistency during failovers. (#6141)
+- Clean the WAL volume along with the `PGDATA` volume during bootstrap. (#6265)
+- Update the operator to set the cluster phase to `Unrecoverable` when
+  all previously generated `PersistentVolumeClaims` are missing. (#6170)
+- Fix the parsing of the `synchronous_standby_names` GUC when
+  `.spec.postgresql.synchronous.method` is set to `first`. (#5955)
+- Resolved a potential race condition when patching certain conditions
+  in CRD statuses, improving reliability in concurrent updates. (#6328)
+- Correct role changes to apply at the transaction level instead of the
+  database context. (#6064)
+- Remove the `primary_slot_name` definition from the `override.conf` file on
+  the primary to ensure it is always empty. (#6219)
+- Configure libpq environment variables, including `PGHOST`, in PgBouncer pods
+  to enable seamless access to the `pgbouncer` virtual database using `psql`
+  from within the container. (#6247)
+- Remove unnecessary updates to the Cluster status when verifying changes in
+  the image catalog. (#6277)
+- Prevent panic during recovery from an external server without proper backup
+  configuration. (#6300)
+- Resolved a key collision issue in structured logs, where the name field was
+  inconsistently used to log two distinct values. (#6324)
+- Ensure proper quoting of the inRoles field in SQL statements to prevent
+  syntax errors in generated SQL during role management. (#6346)
+- `cnpg` plugin:
+    - Ensure the `kubectl` context is properly passed in the `psql` command. (#6257)
+    - Avoid displaying physical backups block when empty with `status` command. (#5998)
+
 ## Version 1.23.5
 
 **Release date:** Oct 16, 2024
