docs: release notes for 1.25.1 and 1.24.2
Closes #6892

Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/docs/src/release_notes/v1.25.md
+++ b/docs/src/release_notes/v1.25.md
@@ -6,6 +6,62 @@ For a complete list of changes, please refer to the
 [commits](https://github.com/cloudnative-pg/cloudnative-pg/commits/release-1.25)
 on the release branch in GitHub.
 
+## Version 1.25.1
+
+**Release Date:** February DD, 2024
+
+### Enhancements
+
+- Added support for using the `-r` service with the Pooler. (#6868)
+- Introduced an optional `--ttl` flag for the `pgbench` plugin, allowing
+  automatic deletion of completed jobs after a user-defined duration. (#6701)
+
+### Bug Fixes
+
+- Fixed inconsistent behaviour in default probe knob values when `.spec.probes`
+  is defined, allowing users to override all settings, including
+  `failureThreshold`. If unspecified in the startup probe, `failureThreshold` is
+  now correctly derived from `.spec.startupDelay / periodSeconds` (default:
+  `10`, now overridable). The same applies to liveness probes via
+  `.spec.livenessProbeTimeout`. (#6656)
+- Managed service ports now take precedence over default operator-defined
+  ports. (#6474)
+- Improved PostgreSQL version detection by using a more precise check of the
+  data directory. (#6659)
+- Fixed an issue where WAL metrics were unavailable after an instance restart
+  until a configuration change was applied. (#6816)
+- Fixed an issue in monolithic database import where role import was skipped if
+  no roles were specified. (#6646)
+- Added support for new metrics introduced in PgBouncer 1.24. (#6630)
+- Fixed an issue where `Database`, `Publication`, and `Subscription` CRDs
+  became stuck in `cluster resource has been deleted, skipping reconciliation`
+  after cluster rehydration. This patch forces `status.observedGeneration` to
+  zero, ensuring proper reconciliation. (#6607) <!-- 1.25 only -->
+- Improved handling of replication-sensitive parameter reductions by ensuring
+  timely reconciliation after primary server restarts. (#6440)
+- Ensured `override.conf` is consistently included in `postgresql.conf` during
+  replica cluster bootstrapping, preventing replication failures due to missing
+  configuration settings. (#6808)
+- Ensured `override.conf` is correctly initialised before invoking `pg_rewind`
+  to prevent failures during primary role changes. (#6670)
+- Enhanced webhook responses to return both warnings and errors when
+  applicable, improving diagnostic accuracy. (#6579)
+- Ensured the operator version is correctly reconciled. (#6496)
+- Volume Snapshot Backups:
+    - Fixed an issue where unused backup connections were not properly cleaned up. (#6882)
+    - Fixed a connection leak when snapshot backups fail. (#6879)
+- `cnpg` plugin:
+    - Restored the functionality of the `promote` plugin command. (#6476)
+    - Enhanced `kubectl cnpg report --logs <cluster>` to collect logs from all
+      containers, including sidecars. (#6636)
+    - Ensured `pgbench` jobs can run when a `Cluster` uses an `ImageCatalog`.
+      (#6868)
+
+### Technical Enhancements
+
+- Added support for Kubernetes `client-gen`, enabling automated generation of
+  Go clients for all CloudNativePG CRDs. (#6695)
+
 ## Version 1.25.0
 
 **Release Date:** December 23, 2024
