--- a/docs/src/release_notes/v1.26.md
+++ b/docs/src/release_notes/v1.26.md
@@ -1,27 +1,12 @@
-<!--
+# Release notes for CloudNativePG 1.26
 
-Copy this file inside `docs/src/release_notes/v1.XX.md`, making
-sure you remove this comment.
-
-Create a spreadsheet with the list of commits since the last minor release:
-
-Use the last known tag on `main` branch as a start (e.g. LAST_TAG=v1.25.1).
-
-```bash
-LAST_TAG=v1.25.1
-git checkout main
-git log ${LAST_TAG}.. --oneline --pretty="format:%h;%s" > log.csv
-```
--->
-# Release notes for CloudNativePG 1.XX
-
-History of user-visible changes in the 1.XX minor release of CloudNativePG.
+History of user-visible changes in the 1.26 minor release of CloudNativePG.
 
 For a complete list of changes, please refer to the
-[commits](https://github.com/cloudnative-pg/cloudnative-pg/commits/release-1.XXX
+[commits](https://github.com/cloudnative-pg/cloudnative-pg/commits/release-1.26
 on the release branch in GitHub.
 
-## Version 1.XX.0-rc1
+## Version 1.26.0-rc1
 
 **Release date:** Mon DD, 20YY
 
@@ -37,13 +22,10 @@ on the release branch in GitHub.
 
 ### Enhancements:
 
-- Add ...
-- Introduce ...
-- Allow ...
-- Enhance ...
+- feat: support customizable pod patches via annotations (#6323)
+
 - `cnpg` plugin updates:
-    - Enhance ...
-    - Add ...
+    - ...
 
 ### Security:
 
