chore: update to latest commits
Signed-off-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>

--- a/docs/src/release_notes/v1.24.md
+++ b/docs/src/release_notes/v1.24.md
@@ -8,10 +8,12 @@ on the release branch in GitHub.
 
 ## Version 1.24.3
 
-**Release Date:** February 27, 2025
+**Release Date:** February 28, 2025
 
 ### Enhancements
 
+- Improved operator startup reliability by introducing a startup probe,
+  preventing premature liveness probe failures during initialization. (#7008)
 - Added support for using the `-r` service with the Pooler. (#6868)
 - Introduced an optional `--ttl` flag for the `pgbench` plugin, enabling
   automatic deletion of completed jobs after a user-defined duration. (#6701)
