--- a/docs/src/release_notes/v1.25.md
+++ b/docs/src/release_notes/v1.25.md
@@ -18,13 +18,13 @@ on the release branch in GitHub.
 - Introduced an optional `--ttl` flag for the `pgbench` plugin, enabling
   automatic deletion of completed jobs after a user-defined duration. (#6701)
 - Marked known error messages from the Azure CSI Driver for volume snapshots as
-  retriable, improving resilience. (#6906)
+  retryable, improving resilience. (#6906)
 - Updated the default PostgreSQL version to 17.4 for new cluster
   definitions. (#6960)
 
 ### Bug Fixes
 
-- Fixed inconsistent behaviour in default probe knob values when `.spec.probes`
+- Fixed inconsistent behavior in default probe knob values when `.spec.probes`
   is defined, ensuring users can override all settings, including
   `failureThreshold`. If unspecified in the startup probe, `failureThreshold` is
   now correctly derived from `.spec.startupDelay / periodSeconds` (default: `10`,
@@ -50,7 +50,7 @@ on the release branch in GitHub.
 - Ensured `override.conf` is consistently included in `postgresql.conf` during
   replica cluster bootstrapping, preventing replication failures due to missing
   configuration settings. (#6808)
-- Ensured `override.conf` is correctly initialised before invoking `pg_rewind`
+- Ensured `override.conf` is correctly initialized before invoking `pg_rewind`
   to prevent failures during primary role changes. (#6670)
 - Enhanced webhook responses to return both warnings and errors when
   applicable, improving diagnostic accuracy. (#6579)
