--- a/docs/src/release_notes/v1.24.md
+++ b/docs/src/release_notes/v1.24.md
@@ -12,8 +12,8 @@ on the release branch in GitHub.
 
 ### Enhancements
 
-- Improved operator startup reliability by introducing a startup probe,
-  preventing premature liveness probe failures during initialization. (#7008)
+- Introduced a startup probe for the operator to enhance reliability and
+  prevent premature liveness probe failures during initialization. (#7008)
 - Added support for using the `-r` service with the Pooler. (#6868)
 - Introduced an optional `--ttl` flag for the `pgbench` plugin, enabling
   automatic deletion of completed jobs after a user-defined duration. (#6701)
