--- a/docs/src/release_notes/v1.25.md
+++ b/docs/src/release_notes/v1.25.md
@@ -22,6 +22,15 @@ on the release branch in GitHub.
 - Updated the default PostgreSQL version to 17.4 for new cluster
   definitions. (#6960)
 
+### Security
+
+- The operator image build process has been enhanced to strengthen
+  security and transparency. Images are now signed with `cosign`, and
+  OCI attestations are generated, incorporating the Software Bill of
+  Materials (SBOM) and provenance data. Additionally, OCI annotations
+  have been added to improve traceability and ensure the integrity of
+  the images.
+
 ### Bug Fixes
 
 - Fixed inconsistent behavior in default probe knob values when `.spec.probes`
