docs: add release notes
Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/docs/src/release_notes/v1.26.md
+++ b/docs/src/release_notes/v1.26.md
@@ -21,6 +21,10 @@ on the release branch in GitHub.
   Kubernetes startup and readiness probes in PostgreSQL instances, providing
   greater control over replicas based on the streaming lag. (#6623)
 
+- **Declarative management of extensions and schemas**: Introduced the
+  `extensions` and `schemas` stanzas in the Database resource to declaratively
+  create, modify, and drop PostgreSQL extensions and schemas within a database. (#7062)
+
 - **MAIN FEATURE #1**: short description
 - **MAIN FEATURE #2**: short description
 
