docs: release notes
Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/docs/src/release_notes/v1.26.md
+++ b/docs/src/release_notes/v1.26.md
@@ -17,6 +17,10 @@ on the release branch in GitHub.
 
 ### Features:
 
+- **Improved Startup and Readiness Probes for Replicas**: Enhanced support for
+  Kubernetes startup and readiness probes in PostgreSQL instances, providing
+  greater control over replicas based on the streaming lag. (#6623)
+
 - **MAIN FEATURE #1**: short description
 - **MAIN FEATURE #2**: short description
 
