docs: release notes
Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/docs/src/release_notes/v1.26.md
+++ b/docs/src/release_notes/v1.26.md
@@ -30,6 +30,10 @@ on the release branch in GitHub.
 
 ### Enhancements:
 
+- Introduced the `STANDBY_TCP_USER_TIMEOUT` operator configuration setting,
+  which, if specified, sets the `tcp_user_timeout` parameter on all standby
+  instances managed by the operator.
+
 - feat: support customizable pod patches via annotations (#6323)
 
 - `cnpg` plugin updates:
