--- a/docs/src/release_notes/v1.26.md
+++ b/docs/src/release_notes/v1.26.md
@@ -12,8 +12,13 @@ on the release branch in GitHub.
 
 ### Important changes:
 
-- OPTIONAL
-- OPTIONAL
+- The `hibernate on/off` commands in the `cnpg` plugin for `kubectl` now serve
+  as shortcuts for the declarative hibernation procedure. The previously
+  available imperative implementation has been removed in favor of the
+  declarative approach. Additionally, the `hibernate status` command has been
+  removed in favor of the standard `status` command.
+  **Do not upgrade to version 1.26 of both the plugin and the operator unless
+  you are prepared to migrate to the declarative method.**
 
 ### Features:
 
