--- a/docs/src/release_notes/v1.26.md
+++ b/docs/src/release_notes/v1.26.md
@@ -39,6 +39,11 @@ on the release branch in GitHub.
   which, if specified, sets the `tcp_user_timeout` parameter on all standby
   instances managed by the operator.
 
+- Added the `KUBERNETES_CLUSTER_DOMAIN` configuration option to the operator,
+  allowing users to specify the domain suffix for fully qualified domain names
+  (FQDNs) generated within the Kubernetes cluster. If not set, it defaults to
+  `cluster.local`. (#6989)
+
 - feat: support customizable pod patches via annotations (#6323)
 
 - `cnpg` plugin updates:
