docs: Creative Commons Attribution 4.0 International License
Relates to #7202

Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/docs/src/release_notes/v1.25.md
+++ b/docs/src/release_notes/v1.25.md
@@ -1,3 +1,4 @@
+<!-- SPDX-License-Identifier: CC-BY-4.0 -->
 # Release notes for CloudNativePG 1.25
 
 History of user-visible changes in the 1.25 minor release of CloudNativePG.
