--- a/docs/src/release_notes/v1.24.md
+++ b/docs/src/release_notes/v1.24.md
@@ -1,3 +1,4 @@
+<!-- SPDX-License-Identifier: CC-BY-4.0 -->
 # Release notes for CloudNativePG 1.24
 
 History of user-visible changes in the 1.24 minor release of CloudNativePG.
