--- a/docs/src/release_notes/v1.26.md
+++ b/docs/src/release_notes/v1.26.md
@@ -1,3 +1,4 @@
+<!-- SPDX-License-Identifier: CC-BY-4.0 -->
 # Release notes for CloudNativePG 1.26
 
 History of user-visible changes in the 1.26 minor release of CloudNativePG.
